Correction of collapsed navigation styling.

--- a/src/styles/overrides/_buttons.scss
+++ b/src/styles/overrides/_buttons.scss
@@ -16,10 +16,10 @@
   }
 }
 
-.navbar .btn-outline-success {
+.navbar .form-inline .btn {
   color: $uba-white;
   background-color: $uba-blue;
-  border: none;
+  border-color: $uba-blue;
   &:hover,
   &.hover,
   &:focus,
